@@ -2,6 +2,7 @@ Kiwix 0.9 alpha4
 * Fix a bug (regression) if no welcome page in the ZIM
 * Introduce the kiwix-debug.bat for Windows
 * Fix a UNICODE issue on Windows search engine
+* kiwix-compact can now directly take xapian-directory path as argument
 
 Kiwix 0.9 alpha3
 * Fix major bug ID: 2991242, On Windows the search is accent sensitive
